--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -4,7 +4,16 @@
 			<p>
 			  <%= @pin.description %>
 			</p>
+
+			<p>
+				Created by: 
+			  <%= @pin.user.name %>
+			</p>
+			
+    <% if current_user == @pin.user %>
 			<%= link_to 'Edit', edit_pin_path(@pin) %> |
+			<% end %>
+		
 			<%= link_to 'Back', pins_path %>
 		</div>
 	</div>
